dropdown-distort-issues-fixed

--- a/client/src/Components/Header/Header.css
+++ b/client/src/Components/Header/Header.css
@@ -62,7 +62,7 @@ body{
 }
 #searchField{
   width: 84.2%;
-  background: url(../../assets/icons/right.svg) 0 7px no-repeat;
+  /* background: url(../../assets/icons/right.svg) 0 7px no-repeat; */
   background-size: 13px 27px;
   background-color: white;
   height: 40px;
@@ -78,6 +78,11 @@ body{
   height: 40px;
   padding-left: 4px;
   /* padding-top: 7px; */
+}
+
+#searchLocation:hover {
+  border-bottom-left-radius: 0px;
+
 }
 
 .nav-options {
@@ -285,6 +290,11 @@ i.icon-black{
   border-bottom: none!important;
   box-shadow: none!important;
 }
+
+.collapse {
+  top: "-40px",
+}
+
 .box-shadow{
   width: fit-content;
   border-radius: 15px;
