--- a/client/src/Components/LocateStore/LocateStore.css
+++ b/client/src/Components/LocateStore/LocateStore.css
@@ -132,6 +132,6 @@
 }
 .mapContainer {
   width: 100%;
-  height: 400px;
+  height: 100%;
   padding-bottom: 13px;
 }
